# Nash

./: .gitignore  9.sh  Cargo.toml  README.md  install.sh  ver
.github/workflows/: release.yml  self-hosted-build.yml  test.yml
init_installer/: Cargo.toml
init_installer/src/: main.rs
nash_build_mgr/: Cargo.toml
nash_build_mgr/src/: main.rs
src/: arguments.rs  command_parsing.rs  commands.rs  completion.rs  config.rs  editing.rs  evaluation.rs  globals.rs  helpers.rs  jobs.rs  main.rs  script.rs  update.rs
