[package]
name = "nash"
version = "0.0.9"
edition = "2021"
description = "Nash - A Rust-based alternative to Bash"
authors = ["barely-a-dev <nahman1234lol12@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"


[dependencies]
tokio = { version = "1", features = ["full"] }
whoami = "1.5.2"
rustyline = "9.1.2"
rustyline-derive = "0.7.0"
dirs = "4.0.0"
git2 = "0.19.0"
reqwest = { version = "0.12.8", features = ["json"] }
console = "0.15.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[package.metadata.deb]
maintainer = "barely-a-dev <nahman1234lol12@gmail.com>"
copyright = "2024, Nash Project Contributors"
license-file = ["LICENSE", "4"]
extended-description = "Nash - A Rust-based alternative to Bash"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/nash", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/nash/README", "644"],
]
