[package]
name = "nash_build_mgr"
version = "1.0.0"
edition = "2021"
description = "Nash Build Manager"
authors = ["barely-a-dev <nahman1234lol12@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[dependencies]
git2 = "0.19.0"
indicatif = "0.17.8"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde_json = "1.0.132"
whoami = "1.5.2"
